Adding right fonts and text to elements

--- a/detail.html
+++ b/detail.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/d6bf1861cd.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
 </head>
@@ -14,7 +14,7 @@
     <header>
         <nav class="nav">
             <div class="navbar-logo-box">
-                <img class="logo" src="css/images/logo.png" alt="logo">
+                <a href="index.html"><img class="logo" src="css/images/logo.png" alt="logo"></a>
                 <h5 class="white">Root it</h5>
             </div>
             <div class="navbar-icons-box">
