--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/d6bf1861cd.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
 </head>
@@ -14,7 +14,7 @@
     <header>
         <nav class="nav nav-home">
             <div class="navbar-logo-box">
-                <img class="logo" src="css/images/logo.png" alt="logo">
+                <a href="index.html"><img class="logo" src="css/images/logo.png" alt="logo"></a>
                 <h5 class="white">Root it</h5>
             </div>
             <div class="navbar-icons-box">
@@ -42,50 +42,50 @@
             <div class="row it-row">
                 <div class="setting-explanation-box col- col-lg-6">
                     <i class="fas fa-sliders-h"></i>
-                    <h3>1.- SET:</h3>
-                    <p>Let us making a better search for you by setting filters at your convenience. Choosing type of property and the city where you want to live.</p>
+                    <h3>1.- SET & SEARCH:</h3>
+                    <p>Only type a keyword for a raw search or let us making a better search for you by setting filters at your convenience. Choosing type of property and the city where you want to live.</p>
                 </div>
                 <div class="explore-explanation-box col- col-lg-6">
                     <i class="fas fa-hiking"></i>
                     <h3>2.- EXPLORE:</h3>
-                    <p>Let us making a better search for you by setting filters at your convenience. Choosing type of property and the city where you want to live.</p>
+                    <p>Browse the results, you can review the general information of some properties such as photos, location and price.</p>
                 </div>
                 <div class="choose-explanation-box col- col-lg-6">
                     <i class="fas fa-crosshairs"></i>
                     <h3>3.- CHOOSE:</h3>
-                    <p>Let us making a better search for you by setting filters at your convenience. Choosing type of property and the city where you want to live.</p>
+                    <p>After you skimmed a little, just click on the one that fits best for you to go deeper. you will see very specific details about the property like land meters, decks, parking lots, etc.</p>
                 </div>
                 <div class="contact-explanation-box col- col-lg-6">
                     <i class="fas fa-satellite-dish"></i>
                     <h3>4.- CONTACT:</h3>
-                    <p>Let us making a better search for you by setting filters at your convenience. Choosing type of property and the city where you want to live.</p>
+                    <p>When you decide which one you are interested in, we show all the necessary information about the owner to make a good business relationship</p>
                 </div>    
             </div>
         </div>
         <div class="three-imgs-main-box d-none d-lg-block">
             <div class="ti-box ti-box-1">
                 <div class="ti-text-box">
-                    <h4 class="white">Lorem ipsum dolor sit amet, consectetur adipisicing.</h4>
-                    <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, tenetur.</p>
+                    <h4 class="white">Encouraging people to be conscious about the planet.</h4>
+                    <p class="white">You will find some articles and links on how people can live sustainably.</p>
                     <div class="ti-btn btn"><a href="result.html" class="text-decoration-none ti-a-1">SEARCH</a></div>
                 </div>
                 <img src="css/images/3-imgs-1.jpg" alt="...">
             </div>
             <div class="ti-box ti-box-2">
                 <div class="ti-text-box">
-                    <h4 class="white">Lorem ipsum dolor sit amet, consectetur adipisicing.</h4>
-                    <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, tenetur.</p>
+                    <h4 class="white">Big or small.</h4>
+                    <p class="white">It does not matter if you are looking for a whole building or a home for your pet.</p>
                     <div class="ti-btn btn"><a href="result.html" class="text-decoration-none ti-a-2">SEARCH</a></div>
                 </div>
-                <img src="css/images/3-imgs-1.jpg" alt="...">
+                <img src="css/images/3-imgs-2.jpg" alt="...">
             </div>
             <div class="ti-box ti-box-3">
                 <div class="ti-text-box">
-                    <h4 class="white">Lorem ipsum dolor sit amet, consectetur adipisicing.</h4>
-                    <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, tenetur.</p>
+                    <h4 class="white">Anywhere you can imagine.</h4>
+                    <p class="white">We connect people from all around the world.</p>
                     <div class="ti-btn btn"><a href="result.html" class="text-decoration-none ti-a-3">SEARCH</a></div>
                 </div>
-                <img src="css/images/3-imgs-1.jpg" alt="...">
+                <img src="css/images/3-imgs-3.jpg" alt="...">
             </div>
 
         </div>    
