Showing second and third section on sm size

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="hiw-button btn"><a href="#" class="text-decoration-none">How it works</a></div>
             </div>
         </div>
-        <div class="it-works-main-box m-auto d-none d-md-block">
+        <div class="it-works-main-box m-auto">
             <h3 class="iw-title">Root it works in four simple steps...</h3>
             <div class="row it-row">
                 <div class="setting-explanation-box col- col-lg-6">
@@ -62,7 +62,7 @@
                 </div>    
             </div>
         </div>
-        <div class="three-imgs-main-box d-none d-lg-block">
+        <div class="three-imgs-main-box">
             <div class="ti-box ti-box-1">
                 <div class="ti-text-box">
                     <h4 class="white">Encouraging people to be conscious about the planet.</h4>
