--- a/detail.html
+++ b/detail.html
@@ -23,7 +23,7 @@
             </div>
         </nav>    
     </header>  
-    <main class="detail-result-main-box">
+    <main class="detail-result-main-box m-auto">
         <h1>Welcome to your new home.</h1>
         <div class="detail-result-1">
             <div id="detail-house-1" class="carousel slide" data-ride="carousel">
@@ -96,41 +96,41 @@
                 <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4"></i></a>
                 <a href="#" class="text-decoration-none"><i class="fas fa-print"></i></a>
             </div>
-            <div class="general-data-box">
+            <div class="general-data-box m-auto-sm">
                 <h3>General information</h3>
                 <div class="m-auto">
                     <table >
                         <tr>
-                            <td class="input"><i class="fas fa-dollar-sign"></i></td>
+                            <td class="input text-center font-weight-bold"><i class="fas fa-dollar-sign"></i></td>
                             <td><span>Price:</span></td>
-                            <td class="input"><span>$ 16,000 MXN</span></td>
+                            <td class="input text-center font-weight-bold"><span>$ 16,000 MXN</span></td>
                         </tr>
                         <tr>
-                            <td class="input"><i class="fas fa-vihara"></i></td>
+                            <td class="input text-center font-weight-bold"><i class="fas fa-vihara"></i></td>
                             <td><Span>Levels:</Span></td>
-                            <td class="input"><span>2</span></td>
+                            <td class="input text-center font-weight-bold"><span>2</span></td>
                         </tr>
                         <tr>
-                            <td class="input"><i class="fas fa-car"></i></td>
+                            <td class="input text-center font-weight-bold"><i class="fas fa-car"></i></td>
                             <td><Span>Parking lots:</Span></td>
-                            <td class="input"><span>2</span></td>
+                            <td class="input text-center font-weight-bold"><span>2</span></td>
                         </tr>
                     </table>
                     <table >
                         <tr>
-                            <td class="input"><i class="fas fa-mountain"></i></td>
+                            <td class="input text-center font-weight-bold"><i class="fas fa-mountain"></i></td>
                             <td><Span>Land meters:</Span></td>
-                            <td class="input"><span>150 m2</span></td>
+                            <td class="input text-center font-weight-bold"><span>150 m2</span></td>
                         </tr>
                         <tr>
-                            <td class="input"><i class="fas fa-bed"></i></td>
+                            <td class="input text-center font-weight-bold"><i class="fas fa-bed"></i></td>
                             <td><span>Rooms:</span></td>
-                            <td class="input"><span class="input">4</span></td>
+                            <td class="input text-center font-weight-bold"><span class="input">4</span></td>
                         </tr>
                         <tr>
-                            <td class="input"><i class="fas fa-toilet"></i></td>
+                            <td class="input text-center font-weight-bold"><i class="fas fa-toilet"></i></td>
                             <td><span>Bathrooms:</span></td>
-                            <td class="input"><span class="input">3</span></td>
+                            <td class="input text-center font-weight-bold"><span class="input">3</span></td>
                         </tr>    
                     </table>
                 </div>    
@@ -169,13 +169,13 @@
                             <label for="form-user-input3">Phone number</label>
                             <input type="text" class="form-control" id="form-user-input3" placeholder="844-879-42-36">
                         </div>
-                        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                        <button type="submit" class="btn btn-primary mb-2 btn-x">Submit</button>
                     </form>
                 </div>    
             </div>
         </div>
     </main>
-    <footer class="footer footer-detail">
+    <footer class="footer footer-detail m-auto-sm">
         <div class="icons-description-box">
             <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4 white"></i></a>
             <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4 white"></i></a>
