--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
                 <div class="search-box">
                     <h5>SEARCH BY KEY WORD:</h5>
                     <form class="input-box"  action="#">
-                        <input type="text">
-                        <div class="search-button btn"><a href="result.html" class="white text-decoration-none">SEARCH</a></div>
+                        <input type="text" class="btn-x">
+                        <div class="search-button btn-x"><a href="result.html" class="white text-decoration-none">SEARCH</a></div>
                     </form>
                 </div>
-                <div class="hiw-button btn"><a href="#" class="text-decoration-none">How it works</a></div>
+                <div class="hiw-button btn-x btn"><a href="#" class="text-decoration-none black font-weight-bold">How it works</a></div>
             </div>
         </div>
         <div class="it-works-main-box m-auto">
-            <h3 class="iw-title">Root it works in four simple steps...</h3>
+            <h3 class="iw-title font-weight-bold text-center">Root it works in four simple steps...</h3>
             <div class="row it-row">
-                <div class="setting-explanation-box col- col-lg-6">
+                <div class="setting-explanation-box col- col-lg-6 text-center">
                     <i class="fas fa-sliders-h"></i>
                     <h3>1.- SET & SEARCH:</h3>
                     <p>Only type a keyword for a raw search or let us making a better search for you by setting filters at your convenience. Choosing type of property and the city where you want to live.</p>
                 </div>
-                <div class="explore-explanation-box col- col-lg-6">
+                <div class="explore-explanation-box col- col-lg-6 text-center">
                     <i class="fas fa-hiking"></i>
                     <h3>2.- EXPLORE:</h3>
                     <p>Browse the results, you can review the general information of some properties such as photos, location and price.</p>
                 </div>
-                <div class="choose-explanation-box col- col-lg-6">
+                <div class="choose-explanation-box col- col-lg-6 text-center">
                     <i class="fas fa-crosshairs"></i>
                     <h3>3.- CHOOSE:</h3>
                     <p>After you skimmed a little, just click on the one that fits best for you to go deeper. you will see very specific details about the property like land meters, decks, parking lots, etc.</p>
                 </div>
-                <div class="contact-explanation-box col- col-lg-6">
+                <div class="contact-explanation-box col- col-lg-6 text-center">
                     <i class="fas fa-satellite-dish"></i>
                     <h3>4.- CONTACT:</h3>
                     <p>When you decide which one you are interested in, we show all the necessary information about the owner to make a good business relationship</p>
@@ -64,33 +64,33 @@
         </div>
         <div class="three-imgs-main-box">
             <div class="ti-box ti-box-1">
-                <div class="ti-text-box">
+                <div class="ti-text-box m-auto-sm">
                     <h4 class="white">Encouraging people to be conscious about the planet.</h4>
                     <p class="white">You will find some articles and links on how people can live sustainably.</p>
-                    <div class="ti-btn btn"><a href="result.html" class="text-decoration-none ti-a-1">SEARCH</a></div>
+                    <div class="ti-btn btn-x btn"><a href="result.html" class="text-decoration-none ti-a-1">SEARCH</a></div>
                 </div>
                 <img src="css/images/3-imgs-1.jpg" alt="...">
             </div>
             <div class="ti-box ti-box-2">
-                <div class="ti-text-box">
+                <div class="ti-text-box m-auto-sm">
                     <h4 class="white">Big or small.</h4>
                     <p class="white">It does not matter if you are looking for a whole building or a home for your pet.</p>
-                    <div class="ti-btn btn"><a href="result.html" class="text-decoration-none ti-a-2">SEARCH</a></div>
+                    <div class="ti-btn btn-x btn"><a href="result.html" class="text-decoration-none ti-a-2">SEARCH</a></div>
                 </div>
                 <img src="css/images/3-imgs-2.jpg" alt="...">
             </div>
             <div class="ti-box ti-box-3">
-                <div class="ti-text-box">
+                <div class="ti-text-box m-auto-sm">
                     <h4 class="white">Anywhere you can imagine.</h4>
                     <p class="white">We connect people from all around the world.</p>
-                    <div class="ti-btn btn"><a href="result.html" class="text-decoration-none ti-a-3">SEARCH</a></div>
+                    <div class="ti-btn btn-x btn"><a href="result.html" class="text-decoration-none ti-a-3">SEARCH</a></div>
                 </div>
                 <img src="css/images/3-imgs-3.jpg" alt="...">
             </div>
 
         </div>    
     </main>
-    <footer class="footer">
+    <footer class="footer m-auto-sm">
         <div class="icons-description-box">
             <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4 white"></i></a>
             <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4 white"></i></a>
