--- a/result.html
+++ b/result.html
@@ -49,7 +49,7 @@
                   <option value="3">Merida</option>
                   <option value="3">Veracruz</option>
               </select>
-              <div class="filters-button btn"><a href="result.html" class="white text-decoration-none">SEARCH</a></div>
+              <div class="filters-button btn btn-x"><a href="result.html" class="white text-decoration-none">SEARCH</a></div>
           </div>
       </div>
     </div>
@@ -320,7 +320,7 @@
       </div>
     </div>  
   </main>
-  <footer class="footer footer-result">
+  <footer class="footer footer-result m-auto-sm">
     <div class="icons-description-box">
         <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4 white"></i></a>
         <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4 white"></i></a>
