Navbar-icons under logo

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body class="body-home">
     <header>
         <nav class="nav nav-home">
-            <div class="navbar-logo-box">
+            <div class="navbar-logo-box m-auto-sm">
                 <a href="index.html"><img class="logo" src="css/images/logo.png" alt="logo"></a>
                 <h5 class="white">Root it</h5>
             </div>
-            <div class="navbar-icons-box">
+            <div class="navbar-icons-box m-auto-sm">
                 <a href="index.html"><i class="fas fa-search white"><span class="d-none-sm-lg white">SEARCH</span></i></a>
                 <a href="result.html"><i class="fas fa-poll white"><span class="d-none-sm-lg white">TREND</span></i></a>
             </div>
