Aligning bottom section on index file

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="ti-box ti-box-3">
                 <div class="ti-text-box m-auto-sm">
                     <h4 class="white">Anywhere you can imagine.</h4>
-                    <p class="white">We connect people from all around the world.</p>
+                    <p class="white">We have connected people from all around the world. let your imagination be free.</p>
                     <div class="ti-btn btn-x btn"><a href="result.html" class="text-decoration-none ti-a-3">SEARCH</a></div>
                 </div>
                 <img src="css/images/3-imgs-3.jpg" alt="...">
