Debugging the whole code

--- a/detail.html
+++ b/detail.html
@@ -12,14 +12,14 @@
 </head>
 <body class="body-detail">
     <header>
-        <nav class="nav">
+        <nav class="nav nav-home">
             <div class="navbar-logo-box m-auto-sm">
                 <a href="index.html"><img class="logo" src="css/images/logo.png" alt="logo"></a>
-                <h5 class="white">Root it</h5>
+                <h5 class="nav-title white">Root it</h5>
             </div>
             <div class="navbar-icons-box m-auto-sm">
-                <a href="index.html"><i class="fas fa-search white"><span class="d-none-sm-lg white">SEARCH</span></i></a>
-                <a href="result.html"><i class="fas fa-poll white"><span class="d-none-sm-lg white">TREND</span></i></a>
+                <a href="index.html"><i class="fas fa-search white"><span class="nav-icons-span d-none-sm-lg white">SEARCH</span></i></a>
+                <a href="result.html"><i class="fas fa-poll white"><span class="nav-icons-span d-none-sm-lg white">TREND</span></i></a>
             </div>
         </nav>    
     </header>  
@@ -91,45 +91,45 @@
         </div>
         <div class="description-main-box">
             <div class="icons-description-box">
-                <a href="#" class="text-decoration-none"><i class="fab fa-facebook mr-4"></i></a>
-                <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4"></i></a>
-                <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4"></i></a>
-                <a href="#" class="text-decoration-none"><i class="fas fa-print"></i></a>
+                <a href="#" class="id-links text-decoration-none"><i class="id-icons fab fa-facebook mr-4"></i></a>
+                <a href="#" class="id-links text-decoration-none"><i class="id-icons fab fa-whatsapp mr-4"></i></a>
+                <a href="#" class="id-links text-decoration-none"><i class="id-icons far fa-envelope mr-4"></i></a>
+                <a href="#" class="id-links text-decoration-none"><i class="id-icons fas fa-print"></i></a>
             </div>
-            <div class="general-data-box m-auto-sm">
+            <div class="general-data-main-box m-auto-sm">
                 <h3>General information</h3>
-                <div class="m-auto">
-                    <table >
+                <div class="general-data-box m-auto">
+                    <table class="gd-table">
                         <tr>
-                            <td class="input text-center font-weight-bold"><i class="fas fa-dollar-sign"></i></td>
-                            <td><span>Price:</span></td>
+                            <td class="input text-center font-weight-bold"><i class="gd-icons fas fa-dollar-sign"></i></td>
+                            <td class="gd-text"><span>Price:</span></td>
                             <td class="input text-center font-weight-bold"><span>$ 16,000 MXN</span></td>
                         </tr>
                         <tr>
-                            <td class="input text-center font-weight-bold"><i class="fas fa-vihara"></i></td>
-                            <td><Span>Levels:</Span></td>
+                            <td class="input text-center font-weight-bold"><i class="gd-icons fas fa-vihara"></i></td>
+                            <td class="gd-text"><Span>Levels:</Span></td>
                             <td class="input text-center font-weight-bold"><span>2</span></td>
                         </tr>
                         <tr>
-                            <td class="input text-center font-weight-bold"><i class="fas fa-car"></i></td>
-                            <td><Span>Parking lots:</Span></td>
+                            <td class="input text-center font-weight-bold"><i class="gd-icons fas fa-car"></i></td>
+                            <td class="gd-text"><Span>Parking lots:</Span></td>
                             <td class="input text-center font-weight-bold"><span>2</span></td>
                         </tr>
                     </table>
-                    <table >
+                    <table class="gd-table">
                         <tr>
-                            <td class="input text-center font-weight-bold"><i class="fas fa-mountain"></i></td>
-                            <td><Span>Land meters:</Span></td>
+                            <td class="input text-center font-weight-bold"><i class="gd-icons fas fa-mountain"></i></td>
+                            <td class="gd-text"><Span>Land meters:</Span></td>
                             <td class="input text-center font-weight-bold"><span>150 m2</span></td>
                         </tr>
                         <tr>
-                            <td class="input text-center font-weight-bold"><i class="fas fa-bed"></i></td>
-                            <td><span>Rooms:</span></td>
+                            <td class="input text-center font-weight-bold"><i class="gd-icons fas fa-bed"></i></td>
+                            <td class="gd-text"><span>Rooms:</span></td>
                             <td class="input text-center font-weight-bold"><span class="input">4</span></td>
                         </tr>
                         <tr>
-                            <td class="input text-center font-weight-bold"><i class="fas fa-toilet"></i></td>
-                            <td><span>Bathrooms:</span></td>
+                            <td class="input text-center font-weight-bold"><i class="gd-icons fas fa-toilet"></i></td>
+                            <td class="gd-text"><span>Bathrooms:</span></td>
                             <td class="input text-center font-weight-bold"><span class="input">3</span></td>
                         </tr>    
                     </table>
@@ -169,7 +169,7 @@
                             <label for="form-user-input3">Phone number</label>
                             <input type="text" class="form-control" id="form-user-input3" placeholder="844-879-42-36">
                         </div>
-                        <button type="submit" class="btn btn-primary mb-2 btn-x">Submit</button>
+                        <button type="submit" class="btn btn-primary mb-2 btn-x w-100">Submit</button>
                     </form>
                 </div>    
             </div>
@@ -183,10 +183,10 @@
             <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4 white"></i></a>
             <a href="#" class="text-decoration-none"><i class="fab fa-instagram white"></i></a>
         </div>
-        <ul>
-            <li><a href="#" class="text-decoration-none white">Privacy policy</a></li>
-            <li><a href="#" class="text-decoration-none white">About us</a></li>
-        </ul>
+            <ul class="footer-ul">
+                <li><a href="#" class="footer-ul-a text-decoration-none white">Privacy policy</a></li>
+                <li><a href="#" class="footer-ul-a text-decoration-none white">About us</a></li>
+            </ul>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
