--- a/index.html
+++ b/index.html
@@ -15,49 +15,49 @@
         <nav class="nav nav-home">
             <div class="navbar-logo-box m-auto-sm">
                 <a href="index.html"><img class="logo" src="css/images/logo.png" alt="logo"></a>
-                <h5 class="white">Root it</h5>
+                <h5 class="nav-title white">Root it</h5>
             </div>
             <div class="navbar-icons-box m-auto-sm">
-                <a href="index.html"><i class="fas fa-search white"><span class="d-none-sm-lg white">SEARCH</span></i></a>
-                <a href="result.html"><i class="fas fa-poll white"><span class="d-none-sm-lg white">TREND</span></i></a>
+                <a href="index.html"><i class="fas fa-search white"><span class="nav-icons-span d-none-sm-lg white">SEARCH</span></i></a>
+                <a href="result.html"><i class="fas fa-poll white"><span class="nav-icons-span d-none-sm-lg white">TREND</span></i></a>
             </div>
         </nav>    
     </header>  
     <main>
         <div class="main-bg">
             <div class="search-main-box m-auto">
-                <h1 class="white">Welcome to your new home.</h1>
+                <h1 class="white mt-0">Welcome to your new home.</h1>
                 <div class="search-box">
-                    <h5>SEARCH BY KEY WORD:</h5>
+                    <h5 class="search-title">SEARCH BY KEY WORD:</h5>
                     <form class="input-box"  action="#">
                         <input type="text" class="btn-x">
-                        <div class="search-button btn-x"><a href="result.html" class="white text-decoration-none">SEARCH</a></div>
+                        <div class="search-button btn-x"><a href="result.html" class="btn-x-a white text-decoration-none">SEARCH</a></div>
                     </form>
                 </div>
-                <div class="hiw-button btn-x btn"><a href="#" class="text-decoration-none black font-weight-bold">How it works</a></div>
+                <div class="hiw-button btn-x btn"><a href="#" class=" btn-x-a text-decoration-none black font-weight-bold">How it works</a></div>
             </div>
         </div>
         <div class="it-works-main-box m-auto">
             <h3 class="iw-title font-weight-bold text-center">Root it works in four simple steps...</h3>
             <div class="row it-row">
-                <div class="setting-explanation-box col- col-lg-6 text-center">
-                    <i class="fas fa-sliders-h"></i>
-                    <h3>1.- SET & SEARCH:</h3>
+                <div class="explanation-box setting-explanation-box col- col-lg-6 text-center">
+                    <i class="explanation-i fas fa-sliders-h"></i>
+                    <h3 class="explanation-title">1.- SET & SEARCH:</h3>
                     <p>Only type a keyword for a raw search or let us making a better search for you by setting filters at your convenience. Choosing type of property and the city where you want to live.</p>
                 </div>
-                <div class="explore-explanation-box col- col-lg-6 text-center">
-                    <i class="fas fa-hiking"></i>
-                    <h3>2.- EXPLORE:</h3>
+                <div class="explanation-box explore-explanation-box col- col-lg-6 text-center">
+                    <i class="explanation-i fas fa-hiking"></i>
+                    <h3 class="explanation-title">2.- EXPLORE:</h3>
                     <p>Browse the results, you can review the general information of some properties such as photos, location and price.</p>
                 </div>
-                <div class="choose-explanation-box col- col-lg-6 text-center">
-                    <i class="fas fa-crosshairs"></i>
-                    <h3>3.- CHOOSE:</h3>
+                <div class="explanation-box choose-explanation-box col- col-lg-6 text-center">
+                    <i class="explanation-i fas fa-crosshairs"></i>
+                    <h3 class="explanation-title">3.- CHOOSE:</h3>
                     <p>After you skimmed a little, just click on the one that fits best for you to go deeper. you will see very specific details about the property like land meters, decks, parking lots, etc.</p>
                 </div>
-                <div class="contact-explanation-box col- col-lg-6 text-center">
-                    <i class="fas fa-satellite-dish"></i>
-                    <h3>4.- CONTACT:</h3>
+                <div class="explanation-box contact-explanation-box col- col-lg-6 text-center">
+                    <i class="explanation-i fas fa-satellite-dish"></i>
+                    <h3 class="explanation-title">4.- CONTACT:</h3>
                     <p>When you decide which one you are interested in, we show all the necessary information about the owner to make a good business relationship</p>
                 </div>    
             </div>
@@ -65,27 +65,27 @@
         <div class="three-imgs-main-box">
             <div class="ti-box ti-box-1">
                 <div class="ti-text-box m-auto-sm">
-                    <h4 class="white">Encouraging people to be conscious about the planet.</h4>
+                    <h4 class="ti-title white">Encouraging people to be conscious about the planet.</h4>
                     <p class="white">You will find some articles and links on how people can live sustainably.</p>
-                    <div class="ti-btn btn-x btn"><a href="result.html" class="text-decoration-none ti-a-1">SEARCH</a></div>
+                    <div class="ti-btn btn-x btn"><a href="result.html" class="btn-x-a text-decoration-none ti-a-1">SEARCH</a></div>
                 </div>
-                <img src="css/images/3-imgs-1.jpg" alt="...">
+                <img class="ti-imgs" src="css/images/3-imgs-1.jpg" alt="...">
             </div>
             <div class="ti-box ti-box-2">
                 <div class="ti-text-box m-auto-sm">
-                    <h4 class="white">Big or small.</h4>
+                    <h4 class="ti-title white">Big or small.</h4>
                     <p class="white">It does not matter if you are looking for a whole building or a home for your pet.</p>
-                    <div class="ti-btn btn-x btn"><a href="result.html" class="text-decoration-none ti-a-2">SEARCH</a></div>
+                    <div class="ti-btn btn-x btn"><a href="result.html" class="btn-x-a text-decoration-none ti-a-2">SEARCH</a></div>
                 </div>
-                <img src="css/images/3-imgs-2.jpg" alt="...">
+                <img class="ti-imgs" src="css/images/3-imgs-2.jpg" alt="...">
             </div>
             <div class="ti-box ti-box-3">
                 <div class="ti-text-box m-auto-sm">
-                    <h4 class="white">Anywhere you can imagine.</h4>
+                    <h4 class="ti-title white">Anywhere you can imagine.</h4>
                     <p class="white">We have connected people from all around the world. let your imagination be free.</p>
-                    <div class="ti-btn btn-x btn"><a href="result.html" class="text-decoration-none ti-a-3">SEARCH</a></div>
+                    <div class="ti-btn btn-x btn"><a href="result.html" class="btn-x-a text-decoration-none ti-a-3">SEARCH</a></div>
                 </div>
-                <img src="css/images/3-imgs-3.jpg" alt="...">
+                <img class="ti-imgs" src="css/images/3-imgs-3.jpg" alt="...">
             </div>
 
         </div>    
@@ -98,9 +98,9 @@
             <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4 white"></i></a>
             <a href="#" class="text-decoration-none"><i class="fab fa-instagram white"></i></a>
         </div>
-        <ul>
-            <li><a href="#" class="text-decoration-none white">Privacy policy</a></li>
-            <li><a href="#" class="text-decoration-none white">About us</a></li>
+        <ul class="footer-ul">
+            <li><a href="#" class="footer-ul-a text-decoration-none white">Privacy policy</a></li>
+            <li><a href="#" class="footer-ul-a text-decoration-none white">About us</a></li>
         </ul>
     </footer>
 </body>
