--- a/result.html
+++ b/result.html
@@ -12,34 +12,34 @@
 </head>
 <body class="body-results">
   <header>
-    <nav class="nav">
+    <nav class="nav nav-home">
         <div class="navbar-logo-box m-auto-sm">
             <a href="index.html"><img class="logo" src="css/images/logo.png" alt="logo"></a>
-            <h5 class="white">Root it</h5>
+            <h5 class="nav-title white">Root it</h5>
         </div>
         <div class="navbar-icons-box m-auto-sm">
-            <a href="index.html"><i class="fas fa-search white"><span class="d-none-sm-lg white">SEARCH</span></i></a>
-            <a href="result.html"><i class="fas fa-poll white"><span class="d-none-sm-lg white">TREND</span></i></a>
+            <a href="index.html"><i class="fas fa-search white"><span class="nav-icons-span d-none-sm-lg white">SEARCH</span></i></a>
+            <a href="result.html"><i class="fas fa-poll white"><span class="nav-icons-span d-none-sm-lg white">TREND</span></i></a>
         </div>
     </nav>    
   </header>  
   <main class="results-main-box m-auto">
     <div class="filters-main-box m-auto">
-      <h1 class="white">Filter by type of property, rent/sell and city</h1>
+      <h1 class="filters-title white">Filter by type of property, rent/sell and city</h1>
       <div class="filters-box">
           <div class="selectors-box">
-              <select class="browser-default custom-select type-selector">
+              <select class="selectors-select browser-default custom-select type-selector">
                   <option selected>TYPE</option>
                   <option value="1">Apartment</option>
                   <option value="2">Condo</option>
                   <option value="3">House</option>
               </select>
-              <select class="browser-default custom-select city-selector">
+              <select class="selectors-select browser-default custom-select city-selector">
                   <option selected>RENT / SALE</option>
                   <option value="1">Rent</option>
                   <option value="2">Sale</option>
               </select>
-              <select class="browser-default custom-select city-selector">
+              <select class="selectors-select browser-default custom-select city-selector">
                   <option selected>CITY</option>
                   <option value="1">Monterrey</option>
                   <option value="2">Guadalajara</option>
@@ -49,7 +49,7 @@
                   <option value="3">Merida</option>
                   <option value="3">Veracruz</option>
               </select>
-              <div class="filters-button btn btn-x"><a href="result.html" class="white text-decoration-none">SEARCH</a></div>
+              <div class="filters-button btn btn-x"><a href="result.html" class="btn-x-a white text-decoration-none">SEARCH</a></div>
           </div>
       </div>
     </div>
@@ -63,13 +63,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="detail.html"><img src="css/images/houses/house-1/1.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-1/1.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-1/2.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-1/2.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-1/3.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-1/3.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-1" role="button" data-slide="prev">
@@ -82,7 +82,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <a href="detail.html" class="text-decoration-none"><h3>Casa en bosquecinos</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3 class="rtb-title">Casa en bosquecinos</h3></a>
           <p class="description">QUINTAS SAN ISIDRO, TORREÓN, COAHUILA DE ZARAGOZA</p>
           <p class="mb-0">$ 15,000 MXN</p>
         </div>
@@ -96,13 +96,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="detail.html"><img src="css/images/houses/house-2/1.jpeg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-2/1.jpeg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-2/2.jpeg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-2/2.jpeg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-2/3.jpeg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-2/3.jpeg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-2" role="button" data-slide="prev">
@@ -115,7 +115,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <a href="detail.html" class="text-decoration-none"><h3>Casa en San Felipe</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3 class="rtb-title">Casa en San Felipe</h3></a>
           <p class="description">SAN FELIPE HUEYOTLIPAN, PUEBLA, PUEBLA</p>
           <p class="mb-0">$ 6,500 MXN</p>
         </div>
@@ -129,13 +129,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="detail.html"><img src="css/images/houses/house-3/1.jpeg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-3/1.jpeg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-3/2.jpeg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-3/2.jpeg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-3/3.jpeg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-3/3.jpeg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-3" role="button" data-slide="prev">
@@ -148,7 +148,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <a href="detail.html" class="text-decoration-none"><h3>Renta nave industrial</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3 class="rtb-title">Renta nave industrial</h3></a>
           <p class="description">CIUDAD INDUSTRIAL, MÉRIDA, YUCATÁN</p>
           <p class="mb-0">$ 130,000 MXN</p>
         </div>
@@ -162,13 +162,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="detail.html"><img src="css/images/houses/house-4/1.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-4/1.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-4/2.jpeg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-4/2.jpeg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-4/3.jpeg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-4/3.jpeg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-4" role="button" data-slide="prev">
@@ -181,7 +181,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <a href="detail.html" class="text-decoration-none"><h3>Leibnitz</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3 class="rtb-title">Leibnitz</h3></a>
           <p class="description">ANZURES, MIGUEL HIDALGO, CIUDAD DE MÉXICO</p>
           <p class="mb-0">$ 49,500 MXN</p>
         </div>
@@ -195,13 +195,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="detail.html"><img src="css/images/houses/house-5/1.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-5/1.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-5/2.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-5/2.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-5/3.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-5/3.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-5" role="button" data-slide="prev">
@@ -214,7 +214,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0">
-          <a href="detail.html" class="text-decoration-none"><h3>Casa en renta en Huixquilucan</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3 class="rtb-title">Casa en renta en Huixquilucan</h3></a>
           <p class="description">SAN BARTOLOMÉ COATEPEC, HUIXQUILUCAN, ESTADO DE MÉXICO</p>
           <p class="mb-0">$ 19,500 MXN</p>
         </div>
@@ -228,13 +228,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="detail.html"><img src="css/images/houses/house-6/1.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-6/1.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-6/2.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-6/2.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-6/3.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-6/3.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-6" role="button" data-slide="prev">
@@ -247,7 +247,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0"> 
-          <a href="detail.html" class="text-decoration-none"><h3>Casa en renta CD. Satelite</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3 class="rtb-title">Casa en renta CD. Satelite</h3></a>
           <p class="description">CIUDAD SATÉLITE, NAUCALPAN DE JUÁREZ, ESTADO DE MÉXICO</p>
           <p class="mb-0">$ 35,000 MXN</p>
         </div>
@@ -261,13 +261,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="detail.html"><img src="css/images/houses/house-7/1.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-7/1.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-7/2.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-7/2.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-7/3.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-7/3.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-7" role="button" data-slide="prev">
@@ -280,7 +280,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0"> 
-          <a href="detail.html" class="text-decoration-none"><h3>Propiedad 784512</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3 class="rtb-title">Propiedad 784512</h3></a>
           <p class="description">Bosques de la Herradura, Estado de Mexico</p>
           <p class="mb-0">$ 35,000 MXN</p>
         </div>
@@ -294,13 +294,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item result-carousel-item active">
-              <a href="detail.html"><img src="css/images/houses/house-8/1.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-8/1.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-8/2.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-8/2.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
             <div class="carousel-item result-carousel-item">
-              <a href="detail.html"><img src="css/images/houses/house-8/3.jpg" class="d-block p-0 m-0" alt="..."></a>
+              <a href="detail.html"><img src="css/images/houses/house-8/3.jpg" class="rci-imges d-block p-0 m-0" alt="..."></a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#house-8" role="button" data-slide="prev">
@@ -313,7 +313,7 @@
           </a>
         </div>
         <div class="result-text-box mt-0"> 
-          <a href="detail.html" class="text-decoration-none"><h3>Casa en renta en Fontana residencial</h3></a>
+          <a href="detail.html" class="text-decoration-none"><h3 class="rtb-title">Casa en renta en Fontana residencial</h3></a>
           <p class="description">PRIVADA LOS FRANCISCANOS, SANTIAGO, NUEVO LEÓN</p>
           <p class="mb-0">$ 27,500 MXN</p>
         </div>
@@ -322,17 +322,17 @@
   </main>
   <footer class="footer footer-result m-auto-sm">
     <div class="icons-description-box">
-        <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4 white"></i></a>
-        <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4 white"></i></a>
-        <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4 white"></i></a>
-        <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4 white"></i></a>
-        <a href="#" class="text-decoration-none"><i class="fab fa-instagram white"></i></a>
+      <a href="#" class="text-decoration-none"><i class="fab fa-facebook-f mr-4 white"></i></a>
+      <a href="#" class="text-decoration-none"><i class="fab fa-whatsapp mr-4 white"></i></a>
+      <a href="#" class="text-decoration-none"><i class="far fa-envelope mr-4 white"></i></a>
+      <a href="#" class="text-decoration-none"><i class="fab fa-twitter mr-4 white"></i></a>
+      <a href="#" class="text-decoration-none"><i class="fab fa-instagram white"></i></a>
     </div>
-    <ul>
-        <li><a href="#" class="text-decoration-none white">Privacy policy</a></li>
-        <li><a href="#" class="text-decoration-none white">About us</a></li>
+    <ul class="footer-ul">
+        <li><a href="#" class="footer-ul-a text-decoration-none white">Privacy policy</a></li>
+        <li><a href="#" class="footer-ul-a text-decoration-none white">About us</a></li>
     </ul>
-  </footer>
+</footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
